ghc-4335c07/testsuite/tests/indexed-types/should_compile/T10713.hs
{-# LANGUAGE TypeFamilies, PolyKinds, DataKinds #-}

module T10713 where

import Data.Proxy

type family TEq t s where
  TEq t t = 'True
  TEq t s = 'False
data family T a

foo :: Proxy (TEq (T Int) (T Bool)) -> Proxy 'False
foo = id
